; ModuleID = '/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_prefix.c'
source_filename = "/home/carl/AnghaBench/AppImageKit/src/extr_binreloc.c_dJyi14798182285183_br_find_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@exe = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @br_find_prefix(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** @exe, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i8*, i8** %3, align 8
  %13 = call i8* @strdup(i8* %12)
  store i8* %13, i8** %2, align 8
  br label %23

14:                                               ; preds = %8
  store i8* null, i8** %2, align 8
  br label %23

15:                                               ; preds = %1
  %16 = load i8*, i8** @exe, align 8
  %17 = call i8* @br_dirname(i8* %16)
  store i8* %17, i8** %4, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i8* @br_dirname(i8* %18)
  store i8* %19, i8** %5, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @free(i8* %20)
  %22 = load i8*, i8** %5, align 8
  store i8* %22, i8** %2, align 8
  br label %23

23:                                               ; preds = %15, %14, %11
  %24 = load i8*, i8** %2, align 8
  ret i8* %24
}

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @br_dirname(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
